<resources>
    <string name="app_name">module-kotlin</string>
    <string name="posters_source">Картинки взяты с https://wwww.pexels.com</string>
    <string name="main_screen_nav_menu_home">Главная</string>
    <string name="main_screen_nav_menu_fav">ИЗБРАННОЕ</string>
    <string name="main_screen_nav_menu_later">ПОСМОТРЕТЬ ПОЗЖЕ</string>
    <string name="main_screen_nav_menu_selections">ПОДБОРКИ</string>
    <string name="main_screen_setting_menu_title">НАСТРОЙКИ</string>
    <string name="main_screen_setting_menu_settings">НАСТРОЙКИ</string>
    <string name="main_screen_title">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="settings_rb_popular">Популярные</string>
    <string name="settings_radio_group_title">Настройки</string>
    <string name="settings_rb_top">Топ</string>
    <string name="settings_rb_soon">Скоро</string>
    <string name="settings_rb_playing">В кинотеатрах</string>
    <string name="settings_rb_header">Подборка на главном экране</string>
    <string name="permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="download_to_galary">Сохранено в галерею</string>
    <string name="open">В галерею</string>
    <string name="load_error">Ошибка загрузки</string>
    <string name="message_no_connection">Нет связи с сервером</string>
</resources>