<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_menu_fav"
        android:icon="@drawable/ic_twotone_favorite"
        android:title="@string/main_screen_nav_menu_fav"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/nav_menu_later"
        android:icon="@drawable/ic_twotone_watch_later"
        android:title="@string/main_screen_nav_menu_later"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/nav_menu_selections"
        android:icon="@drawable/ic_twotone_selections"
        android:title="@string/main_screen_nav_menu_selections"
        app:showAsAction="ifRoom|withText" />
</menu>